[tool.poetry]
name = "nodegraphqt"
version = "0.1.7"
description = "NodeGraphQt is a framework that can be used to provide your app with graph processing capabilities."
authors = ["Thomas Chen <thomas.chen@pacificlife.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.7, <3.10"
PySide2 = "^5.15.2"
"Qt.py" = "^1.3.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-qt = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
